test/functions/deitz/test_bad_function.good
test_bad_function.chpl:1: In function '__init_test_bad_function':
test_bad_function.chpl:5: error: Unresolved call 'foo(2.0)'
error: Candidates are:
test_bad_function.chpl:1: error:   foo(i: int)
